# AWS_SA_CHATBOT_PCD

./: .gitignore  archive.txt
backend/: .env  app.py  crew_system.py  experts_crew_system.py  pyproject.toml
frontend/: package-lock.json  package.json
frontend/src/app/: WizardForm.tsx  layout.tsx  page.tsx
multi-agent-system/: .gitignore  aws-consultant.ipynb  aws-sa-notebook.ipynb  pyproject.toml  solutions-experts-aws.ipynb
multi-agent-system/.ipynb_checkpoints/: aws-sa-notebook-checkpoint.ipynb  solutions-experts-aws-checkpoint.ipynb
setup/: Llama3dot3Modelfile  create-llama3dot3-model-file.sh
updated-environment-crew/: pyproject.toml  sequential-experts-system.ipynb  solutions-experts-aws.ipynb
updated-environment-crew/.ipynb_checkpoints/: sequential-experts-system-checkpoint.ipynb  solutions-experts-aws-checkpoint.ipynb
updated-frontend-demo/: README.md  global.css  package-lock.json  package.json
updated-frontend-demo/app/: globals.css  layout.tsx  page.tsx  theme.ts
updated-frontend-demo/app/api/login/: route.ts
updated-frontend-demo/app/api/logout/: route.ts
updated-frontend-demo/app/api/register/: route.ts
updated-frontend-demo/app/auth/login/: page.tsx
updated-frontend-demo/app/auth/register/: page.tsx
updated-frontend-demo/app/wizard/: page.tsx
updated-frontend-demo/components/: AnimatedLogoCloudProps.tsx  FUIHeroSectionWithImage.tsx  FUIHeroWithJelly.tsx  Opensource.tsx  PricingSectionProps.tsx  features.tsx  navbar.tsx  testo.tsx
updated-frontend-demo/components/ui/: Spotlight.tsx  spotlight-new.tsx
updated-frontend-demo/hooks/: use-toast.ts
updated-frontend-demo/interfaces/: types.ts
updated-frontend-demo/prisma/: dev.db  schema.prisma
