[tool.poetry]
name = "aws-sa-crew-backend"
version = "0.1.0"
description = "FastAPI backend for the AWS SA Crew system"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "3.12.*"
crewai = "0.114.0"               # Updated to match frontend
crewai_tools = "0.42.0"          # Updated to match frontend
langchain_community = "0.3.22"   # Updated to match frontend
python-dotenv = "1.1.0"          # Updated to match frontend
markdown = "3.8"                 # Updated to match frontend
pymarkdownlnt = "0.9.29"         # Updated to match frontend
fastapi = "^0.110.0"             # Kept original
uvicorn = "^0.29.0"              # Kept original
setuptools = "^78.1.0"           # Kept original

[tool.pyright]
useLibraryCodeForTypes = true
exclude = [".cache"]

[tool.ruff]
select = ['E', 'W', 'F', 'I', 'B', 'C4', 'ARG', 'SIM']
ignore = ['W291', 'W292', 'W293']

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"