[tool.poetry]
name = "aws-sa-crew"
version = "0.1.0"
description = ""

[tool.poetry.dependencies]
python = "3.12.*"
crewai = "0.114.0"               # → Apr 10 2025 :contentReference[oaicite:8]{index=8}
crewai_tools = "0.42.0"          # → Apr 24 2025 :contentReference[oaicite:9]{index=9}
langchain_community = "0.3.22"   # → Latest community integrations :contentReference[oaicite:10]{index=10}
python-dotenv = "1.1.0"          # → Mar 25 2025 :contentReference[oaicite:11]{index=11}
markdown = "3.8"                 # → Apr 11 2025 :contentReference[oaicite:12]{index=12}
pymarkdownlnt = "0.9.29"         # → Mar 11 2025 :contentReference[oaicite:13]{index=13}
notebook = "^7.4.1"              # → Apr 23 2025 :contentReference[oaicite:14]{index=14}
ipykernel = "^6.29.5"            # → Jul 1 2024 :contentReference[oaicite:15]{index=15}

[tool.pyright]
useLibraryCodeForTypes = true
exclude = [".cache"]

[tool.ruff]
select = ['E', 'W', 'F', 'I', 'B', 'C4', 'ARG', 'SIM']
ignore = ['W291', 'W292', 'W293']

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
